--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -1,3 +1,32 @@
 .rightbar {
   flex: 2;
 }
+.rightbarWrapper {
+  padding: 20px 20px 0 0;
+}
+.birthdayImg {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+.birthdayContainer {
+  display: flex;
+  align-items: center;
+}
+.birthdayText {
+  font-weight: 300;
+  font-style: 15px;
+}
+.rightbarAd {
+  width: 100%;
+  border-radius: 10px;
+  margin: 30px 0;
+}
+.rightbarTitle {
+  margin-bottom: 20px;
+}
+.rightbarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
